Fixed more spacing issues

--- a/frontend/components/login-prompt/LoginPrompt.module.scss
+++ b/frontend/components/login-prompt/LoginPrompt.module.scss
@@ -3,6 +3,7 @@
     background-color: var(--background-secondary);
     border: 2px solid var(--background-tertiary);
     border-radius: var(--border-radius-primary);
+    margin-top: var(--spacing-primary);
 
     h2 {
         margin: 0;
