--- a/frontend/layouts/home/HomeLayout.module.scss
+++ b/frontend/layouts/home/HomeLayout.module.scss
@@ -1,6 +1,5 @@
 .tab-container {
     position: relative;
-    margin-bottom: var(--spacing-primary);
     padding-top: var(--spacing-primary);
 }
 .tabs {
