--- a/frontend/styles/Explore.module.scss
+++ b/frontend/styles/Explore.module.scss
@@ -2,7 +2,6 @@
     position: sticky;
     top: var(--navbar-height);
     padding: var(--spacing-primary) 0;
-    margin-top: calc(-1 * var(--spacing-primary));
     background-color: var(--background-primary);
     border-bottom: 2px solid var(--background-primary);
     transition: border-color .2s;
